syntax = "proto3";

option go_package = ".;filetransfer";

package filetransfer;

// Interface exported by the server.
service FileTransfer {
  rpc Upload(stream File) returns (FileResponse) {}
}

message File {
  string name = 1;
  bytes content = 2;
}

message FileResponse {
  int64 bytesWritten = 1;
}
